# aiglass

./: .env.example  .gitignore  .uv.toml  Dockerfile  Makefile  README-uv.md  README.md  app_main.py  audio_player.py  pyproject.toml  requirements-dev.txt  setup.bat  setup.sh  trafficlight_detection.py
.specify/memory/: constitution.md
esp32/: platformio.ini
esp32/src/: ESP_I2S.h  ICM42688.cpp  aiglass_core.cpp  aiglass_core.h  app_main.h  camera_pins.h  compile.cpp  main.cpp  test_main.cpp
