[project]
name = "aiglass"
version = "1.0.0"
description = "AI 智能盲人眼镜系统 - A smart navigation and assistance system for visually impaired people"
readme = "README.md"
requires-python = ">=3.9,<3.12"
license = {file = "LICENSE"}
authors = [
    {name = "AI Glass Development Team"}
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "starlette>=0.27.0",
    "opencv-python>=4.8.1.78",
    "numpy>=1.24.3",
    "Pillow>=10.1.0",
    "ultralytics>=8.3.200",
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "mediapipe>=0.10.8",
    "pydub>=0.25.1",
    "pygame>=2.5.2",
    "dashscope>=1.14.1",
    "openai>=1.3.5",
    "python-dotenv>=1.0.0",
    "opencv-contrib-python>=4.8.1.78",
    "httpx[socks]>=0.28.1",
    "dill>=0.3.7",
    "clip",
    "pyaudio>=0.2.14",
    "platformio>=6.1.18",
]

[project.optional-dependencies]
audio = [
    "pyaudio>=0.2.14",  # Requires system library: portaudio (install with `brew install portaudio`)
]
all = [
    "pyaudio>=0.2.14",
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "flake8>=6.1.0",
]
onnx = [
    "onnxruntime-gpu>=1.16.3",
]

[project.scripts]
aiglass = "app_main:main"

[project.urls]
Homepage = "https://github.com/neocxf/aiglass"
Repository = "https://github.com/neocxf/aiglass"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.uv.sources]
clip = { git = "https://github.com/ultralytics/CLIP.git" }
